# Talkeet

./: .gitignore  CLAUDE.md
backend/: CLAUDE.md  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/routers/: analyze.py  export.py  transcribe.py
backend/app/services/: export.py  silence.py  transcription.py  waveform.py
backend/tests/: test_export.py  test_silence.py  test_transcription.py  test_waveform.py
frontend/Talkeet/Talkeet/: ContentView.swift  TalkeetApp.swift
frontend/Talkeet/Talkeet.xcodeproj/: project.pbxproj
frontend/Talkeet/Talkeet.xcodeproj/project.xcworkspace/xcuserdata/clementmaubon.xcuserdatad/: UserInterfaceState.xcuserstate
frontend/Talkeet/Talkeet.xcodeproj/xcshareddata/xcschemes/: Talkeet.xcscheme
frontend/Talkeet/Talkeet.xcodeproj/xcuserdata/clementmaubon.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
frontend/Talkeet/Talkeet.xcodeproj/xcuserdata/clementmaubon.xcuserdatad/xcschemes/: xcschememanagement.plist
frontend/Talkeet/Talkeet/Services/: BackendManager.swift
frontend/Talkeet/TalkeetTests/: TalkeetTests.swift
frontend/Talkeet/TalkeetUITests/: TalkeetUITests.swift  TalkeetUITestsLaunchTests.swift
milestones/: 01-backend-scaffold.md  02-whisperx-transcription.md  03-waveform-extraction.md  04-export-endpoints.md  05-swiftui-scaffold.md  06-video-player-segment-list.md  07-waveform-timeline.md  08-segment-editor.md  09-parameters-panel.md  10-export-panel-polish.md
